# bicycle_rent

./: LICENSE  manage.py  pyproject.toml
.github/workflows/: flake8.yml
api/: urls.py
api/v1/: serializers.py  urls.py
bicycle_rent/: apps.py  asgi.py  settings.py  urls.py  wsgi.py
bicycles/: models.py
bicycles/migrations/: 0001_initial.py  0002_initial.py  0003_alter_bike_year_manufacture.py
config/: settings.py  urls.py
locale/ru/LC_MESSAGES/: django.po
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
