[tool.poetry]
name = "bicycle-rent"
version = "0.1.0"
description = ""
authors = ["dima <pieero47@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework = "^3.15.2"
pillow = "^10.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
black = "^24.4.2"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = 0

[tool.flake8]
exclude = [".git", "__pycache__", ".venv"]
max-line-length = 120

[tool.isort]
profile = "black"